--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
 .page-links {
     padding: 0px 30px; /* Adjust padding as needed */
     color: rgb(0, 0, 69);
-    font-size: 14px; /* Adjust font size as needed */
+    font-size: 15px; /* Adjust font size as needed */
     text-decoration: none;
 }
 
@@ -108,4 +108,39 @@ h2 {
 .content {
     max-width: 500px; /* Adjust the max-width as needed */
     font-size: 14px;
+}
+
+/* Media query for mobile devices */
+@media (max-width: 600px) {
+    .overlay-page {
+        flex-direction: column;
+        align-items: center;
+        text-align: center; /* Center align text within the container */
+    }
+
+    .page-links, .page-selected-link {
+        padding: 10px 0px; /* Adjust padding as needed */
+        font-size: 16px; /* Adjust font size as needed */
+    }
+
+    .overlay-homepage {
+        position: relative; /* Ensure .overlay-homepage is positioned relative */
+        top: 40px; /* Adjust top position as needed */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center; /* Center align text within the container */
+    }
+
+    .homepage-name {
+        font-size: 13px; /* Adjust font size as needed */
+    }
+
+    .homepage-links {
+        display: inline-block; /* Display links in a row */
+        padding-right: 10px; /* Adjust padding as needed */
+        margin-top: 40px;
+        margin-right: 30px;
+        font-size: 15px; /* Adjust font size as needed */
+    }
 }
